--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 .App {
   text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 24px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 @media (prefers-reduced-motion: no-preference) {
