--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   font-style: normal;
   font-size: 24px;
 }
+a{
+  text-decoration: none;
+  color: #000;
+}
 button {
   background-color: transparent;
   border: none;
