--- a/src/components/LayoutTop/LayoutTop.module.css
+++ b/src/components/LayoutTop/LayoutTop.module.css
@@ -5,7 +5,7 @@
 }
 
 .navInner {
-  width: 1200px; 
+  max-width: 1200px; 
   height: 92px; 
   margin: 0 auto; 
   display: flex; 
@@ -19,18 +19,21 @@
 
 .navInner input {
   width: 100%; 
-  height: 35px
+  height: 35px;
+  margin-top: 25px;
 }
-
+.navInner a{
+  color: #fff
+}
 .icon {
-  position: absolute; 
-  color: #000; 
-  top: 35px;
-  right: 400px
+  position: relative;
+  color: #000;
+  left: 400px;
+  bottom: 33px;
 }
 
 .navBottom {
-  width: 1200px; 
+  max-width: 1200px; 
   height: 110px;
   margin: 0 auto ;
   display: flex ;
