--- a/src/components/Packages/Packages.module.css
+++ b/src/components/Packages/Packages.module.css
@@ -31,6 +31,19 @@
   color: #0779BF;
 }
 
+.description button {
+  width: 200px;
+  height: 40px;
+  padding: 5px;
+  background-color: transparent;
+  border: 1px solid #000;
+  transition: transform 0.1s;
+  font-size: 20px;
+}
+.description button:hover{
+  transform: scale(1.01);
+}
+
 .price{
   display: flex;
   border-left: 1px solid #fff;
@@ -40,7 +53,40 @@
   color: #0779BF;
 }
 .item{
-  font-weight: 400;
+  margin-bottom: 5px;
   font-size: 20px;
   text-align: left;
+}
+
+.popupContainer {
+  position: relative;
+  display: inline-block;
+}
+
+.popup {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  margin-top: 5px;
+  background: white;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 100;
+  max-width: 430;
+  max-height: 430px;
+  overflow: scroll;
+
+}
+
+.channelList {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.channelList li {
+  padding: 5px 10px;
+  cursor: auto;
+  font-size: 20px;
 }
