--- a/src/components/ServiceInform/InfoUser/Record.module.css
+++ b/src/components/ServiceInform/InfoUser/Record.module.css
@@ -2,7 +2,7 @@
   max-width: 860px;
   width: 100%;
   margin: 0 auto;
-  padding: 10px;
+  padding: 30px 5px 5px 5px;
 }
 .item {
   margin-bottom: 40px;
@@ -24,3 +24,4 @@
   font-size: 20px;
   margin-left: 79%;
 }
+
