--- a/src/components/AdminUI/LogIn/LogIn.module.css
+++ b/src/components/AdminUI/LogIn/LogIn.module.css
@@ -1,18 +1,28 @@
 .form{
-  max-width: 860px;
+  max-width: 600px;
   width: 100%;
   margin: 0 auto;
   padding: 30px 5px 5px 5px;
 }
+
+.title{
+  margin-bottom: 20px;
+  font-weight: 600;
+
+}
 .item {
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   display: flex;
   justify-content: space-between;
 }
 .item input {
-  width: 600px;
+  width: 400px;
   background-color: #E1E1E1;
   border: none;
+}
+
+.item label {
+  font-weight: 600;
 }
 .btn{
   padding: 10px;
@@ -22,4 +32,3 @@
   font-weight: 400;
   font-size: 20px;
 }
-
