--- a/src/components/CustomComponents/CustomElements.module.css
+++ b/src/components/CustomComponents/CustomElements.module.css
@@ -4,3 +4,37 @@
   font-weight: 400; 
   font-size: 20
 }
+.wrapperLinks {
+  height: 65px ;
+  background-color: #E1E1E1
+}
+
+.wrapperLinks div{
+  margin: 0 auto; 
+  max-width: 920px; 
+  height: 100%; 
+  display: flex; 
+  gap: 15px;
+  justify-content: center;
+  align-items: center
+}
+
+.wrapperBtn {
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 30px 5px 5px 5px;
+  align-items: center;
+}
+
+button {
+  width: 100%;
+  height: 65px;
+  background-color: #33B4EE;
+  color: #fff;
+  border: none;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
