--- a/src/components/CustomComponents/CustomElements.module.css
+++ b/src/components/CustomComponents/CustomElements.module.css
@@ -19,17 +19,9 @@
   align-items: center
 }
 
-.wrapperBtn {
-  display: flex;
-  flex-direction: column;
-  max-width: 500px;
-  width: 100%;
-  margin: 0 auto;
-  padding: 30px 5px 5px 5px;
-  align-items: center;
-}
 
-button {
+
+.customBtn {
   width: 100%;
   height: 65px;
   background-color: #33B4EE;
