--- a/src/components/LayoutTop/LayoutTop.module.css
+++ b/src/components/LayoutTop/LayoutTop.module.css
@@ -20,10 +20,15 @@
 .navInner input {
   width: 100%; 
   height: 35px;
-  margin-top: 25px;
 }
 .navInner a{
   color: #fff
+}
+
+.navInner button {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 400;
 }
 .icon {
   position: relative;
