--- a/src/components/AdminUI/DeleteService/ModalDelete/ModalDelete.css
+++ b/src/components/AdminUI/DeleteService/ModalDelete/ModalDelete.css
@@ -44,6 +44,8 @@
 
 .services-list {
   margin: 20px 0;
+  max-height: 350px;
+  overflow: auto;
 }
 
 .wrapperBtn {
@@ -56,7 +58,7 @@
   align-items: center;
 }
 
-.service-item {
+.service-items {
   margin-bottom: 10px;
   border: 1px solid #ddd;
   overflow: hidden;
@@ -116,15 +118,17 @@
 
 .cancel-btn {
   padding: 8px 16px;
-  background-color: #f44336;
+  background-color: #33B4EE;
   color: white;
   border: none;
   cursor: pointer;
+  margin: 0 auto;
+
 }
 
 .confirm-btn {
   padding: 8px 16px;
-  background-color: #4CAF50;
+  background-color: #f44336;
   color: white;
   border: none;
   cursor: pointer;
