--- a/src/components/CustomComponents/CustomElements.module.css
+++ b/src/components/CustomComponents/CustomElements.module.css
@@ -1,18 +1,15 @@
 .link {
   text-decoration: none;
   color: #000;
-  font-weight: 400; 
-  font-size: 20
+
 }
 .wrapperLinks {
-  height: 65px ;
   background-color: #E1E1E1
 }
 
 .wrapperLinks div{
   margin: 0 auto; 
-  max-width: 920px; 
-  height: 100%; 
+  max-width: 950px; 
   display: flex; 
   gap: 15px;
   justify-content: center;
@@ -29,4 +26,24 @@
   border: none;
   font-size: 20px;
   margin-bottom: 10px;
+}
+
+.activeLink {
+  color: #003C78;
+  font-weight: bold;
+}
+
+@media (max-width: 980px) {
+  .wrapperLinks{
+    font-size: 20px;
+    padding: 10px;
+  }
+}
+
+@media (max-width: 760px) {
+  .wrapperLinks div{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 0;
+  }
 }
