--- a/src/components/Packages/Packages.module.css
+++ b/src/components/Packages/Packages.module.css
@@ -28,16 +28,11 @@
   color: #0779BF;
 }
 
-.description button {
-  width: 200px;
-  height: 40px;
-  padding: 5px;
+.btn {
+  border: none;
+  font-weight: 600;
+  font-size: 24px;
   background-color: transparent;
-  border: 1px solid #000;
-  transition: transform 0.1s;
-}
-.description button:hover{
-  transform: scale(1.01);
 }
 
 .price{
@@ -58,7 +53,12 @@
 }
 
 .popupContainer button{
-  color: #000;
+    width: 200px;
+  height: 40px;
+  padding: 5px;
+  background-color: transparent;
+  border: 1px solid #000;
+  transition: transform 0.1s;
 }
 
 .popup {
