--- a/src/components/ServiceInform/Operation/Operation.module.css
+++ b/src/components/ServiceInform/Operation/Operation.module.css
@@ -7,7 +7,11 @@
   padding: 10px;
   margin-top: 50px;
 }
-
+.operation div {
+  margin-bottom: 20px;
+  font-weight: 600;
+  font-size: 32px; 
+}
 .operation button{
   height: 65px;
   margin-bottom: 20px;
