--- a/src/components/AdminUI/SearchClient/SearchClient.module.css
+++ b/src/components/AdminUI/SearchClient/SearchClient.module.css
@@ -16,6 +16,7 @@
 
 }
 .innerForm  {
+  text-align: center;
   max-width: 740px;
   padding: 10px;
   background-color: #D9D9D9;
@@ -44,5 +45,5 @@
   border: none;
   color: #fff;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 24px;
 }
