--- a/src/components/CustomComponents/CustomElements.module.css
+++ b/src/components/CustomComponents/CustomElements.module.css
@@ -4,12 +4,14 @@
 
 }
 .wrapperLinks {
-  background-color: #E1E1E1
+  background-color: #E1E1E1;
+  height: 70px;
 }
 
 .wrapperLinks div{
   margin: 0 auto; 
   max-width: 950px; 
+  height: 100%;
   display: flex; 
   gap: 15px;
   justify-content: center;
@@ -24,7 +26,7 @@
   background-color: #33B4EE;
   color: #fff;
   border: none;
-  font-size: 20px;
+  font-size: 24px;
   margin-bottom: 10px;
 }
 
