--- a/src/components/ServiceInform/InfoUser/Record.module.css
+++ b/src/components/ServiceInform/InfoUser/Record.module.css
@@ -11,6 +11,13 @@
   margin-top: 50px;
 }
 
+
+.service {
+  font-weight: 400;
+  font-size: 20px;
+  max-width: 300px;
+  margin: 0 auto;
+  margin-bottom: 20px;}
 .item {
   margin-bottom: 40px;
   display: flex;
@@ -27,6 +34,6 @@
   border: none;
   color: #fff;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 24px;
 }
 
