--- a/src/components/ServiceInform/Operation/Operation.module.css
+++ b/src/components/ServiceInform/Operation/Operation.module.css
@@ -12,6 +12,12 @@
   font-weight: 600;
   font-size: 32px; 
 }
+.operation .service {
+  font-weight: 400;
+  font-size: 20px;
+  max-width: 300px;
+  margin: 0 auto;
+  margin-bottom: 20px;}
 .operation button{
   height: 65px;
   margin-bottom: 20px;
