--- a/src/components/ServiceInform/Timetable/Timetabe.module.css
+++ b/src/components/ServiceInform/Timetable/Timetabe.module.css
@@ -11,6 +11,13 @@
   align-items: center;
   margin-top: 30px;
 }
+.service {
+  font-weight: 400;
+  font-size: 20px;
+  max-width: 300px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
 
 .timeButtons {
   display: flex;
