--- a/src/components/CustomComponents/CustomElements.module.css
+++ b/src/components/CustomComponents/CustomElements.module.css
@@ -10,7 +10,7 @@
 
 .wrapperLinks div{
   margin: 0 auto; 
-  max-width: 950px; 
+  max-width: 1200px; 
   height: 100%;
   display: flex; 
   gap: 15px;
@@ -22,7 +22,7 @@
 
 .customBtn {
   width: 100%;
-  height: 65px;
+  padding: 20px;
   background-color: #33B4EE;
   color: #fff;
   border: none;
