--- a/src/components/ServiceInform/InfoUser/Record.module.css
+++ b/src/components/ServiceInform/InfoUser/Record.module.css
@@ -1,30 +1,43 @@
-.form form{
-  max-width: 860px;
+.form {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+form{
+  max-width: 750px;
   width: 100%;
   margin: 0 auto;
-  padding: 30px 5px 5px 5px;
+  /* padding: 30px 5px 5px 5px; */
 }
 
 .title {
   font-weight: 600;
   font-size: 32px;
-  margin-top: 50px;
+  margin-bottom: 20px;
 }
 
 
 .service {
+  display: flex;
+  gap: 10px;
   font-weight: 400;
   font-size: 20px;
-  max-width: 300px;
+  background-color: unset;
+  padding: 10px;
   margin: 0 auto;
-  margin-bottom: 20px;}
+}
+
 .item {
   margin-bottom: 40px;
   display: flex;
   justify-content: space-between;
 }
 .item input {
-  width: 600px;
+  width: 60%;
   background-color: #E1E1E1;
   border: none;
 }
