--- a/src/components/ServiceInform/Operation/Operation.module.css
+++ b/src/components/ServiceInform/Operation/Operation.module.css
@@ -5,7 +5,6 @@
   width: 100%;
   margin: 0 auto;
   padding: 10px;
-  margin-top: 50px;
 }
 .operation div {
   margin-bottom: 20px;
@@ -13,11 +12,14 @@
   font-size: 32px; 
 }
 .operation .service {
+  display: flex;
+  gap: 10px;
   font-weight: 400;
   font-size: 20px;
-  max-width: 300px;
+  background-color: unset;
+  padding: 10px;
   margin: 0 auto;
-  margin-bottom: 20px;}
+}
 .operation button{
   height: 65px;
   margin-bottom: 20px;
