--- a/src/components/CustomComponents/CustomElements.module.css
+++ b/src/components/CustomComponents/CustomElements.module.css
@@ -5,7 +5,9 @@
 }
 .wrapperLinks {
   background-color: #E1E1E1;
-  height: 70px;
+  min-height: 70px;
+  display: flex;
+  align-items: center;
 }
 
 .wrapperLinks div{
@@ -18,7 +20,18 @@
   align-items: center
 }
 
-
+.disabled {
+  opacity: 0.5;        
+  cursor: not-allowed;  
+  pointer-events: none;
+  width: 100%;
+  padding: 20px;
+  background-color: #33B4EE;
+  color: #fff;
+  border: none;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
 
 .customBtn {
   width: 100%;
@@ -44,8 +57,7 @@
 
 @media (max-width: 760px) {
   .wrapperLinks div{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    gap: 0;
+    display: flex;
+    flex-wrap: wrap;
   }
 }
