--- a/src/components/LayoutTop/LayoutTop.module.css
+++ b/src/components/LayoutTop/LayoutTop.module.css
@@ -92,13 +92,14 @@
   }
 }
 
-@media(max-width: 720px){
+@media(max-width: 760px){
   .navTop{
     font-size: 20px;
   }
   .navTop button {
     font-size: 20px;
   }
+  
 }
 
 @media(max-width: 640px){
@@ -108,6 +109,15 @@
   .navBottom{
     display: flex;
     flex-direction: column;
-    
   }
+}
+
+@media(max-width: 420px){
+  .navSupport {
+    display: block;
+  }
+  .navSupport p{
+    text-align: center;
+  }
+
 }
