--- a/src/components/Packages/Packages.module.css
+++ b/src/components/Packages/Packages.module.css
@@ -4,6 +4,7 @@
   margin: 0 auto;
   padding: 15px 5px 5px 5px;
 }
+
 .wrapperPackage h2{
   text-align: left;
   font-size: 30px;
@@ -95,4 +96,13 @@
   padding: 5px 10px;
   cursor: auto;
   font-size: 20px;
+}
+
+
+@media(max-width: 1100px){
+  .wrapperPackage {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 15px
+  }
 }
