--- a/src/components/Packages/Packages.module.css
+++ b/src/components/Packages/Packages.module.css
@@ -106,3 +106,11 @@
     padding: 15px
   }
 }
+
+@media(max-width: 1100px){
+  .wrapperPackage {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 15px
+  }
+}
