--- a/src/components/Packages/Packages.module.css
+++ b/src/components/Packages/Packages.module.css
@@ -2,7 +2,6 @@
   max-width: 960px;
   width: 100%;
   margin: 0 auto;
-  padding: 15px 5px 5px 5px;
 }
 
 .wrapperPackage h2{
@@ -103,14 +102,40 @@
   .wrapperPackage {
     max-width: 800px;
     margin: 0 auto;
-    padding: 15px
   }
 }
 
-@media(max-width: 1100px){
+@media(max-width: 860px){
   .wrapperPackage {
-    max-width: 800px;
+    max-width: 600px;
+    font-size: 20px;
     margin: 0 auto;
-    padding: 15px
+  }
+}
+
+@media(max-width: 650px){
+  .card {
+    font-size: 18px;
+    margin: 15px;
+  }
+}
+
+@media(max-width: 500px){
+  .card {
+    flex-direction: column;
+  }
+  .price{
+    display: flex;
+    border: none;
+    align-items: center;
+    color: #0779BF;
+    padding: 10px;
+  }
+  .searchBtn button{
+    font-size: 16px;
+      width: fit-content;
+      color: #fff;
+      margin-right: 10px;
+      margin-bottom: 10px;
   }
 }
