--- a/src/components/AdminUI/AddService/AddTarifModal/AddTariffModal.module.css
+++ b/src/components/AdminUI/AddService/AddTarifModal/AddTariffModal.module.css
@@ -179,3 +179,9 @@
   background-color: #cccccc;
   cursor: not-allowed;
 }
+
+@media (max-width: 600px) {
+  .modalContent {
+    margin: 10px;
+  }
+}
