--- a/src/components/AdminUI/Booked/Booked.module.css
+++ b/src/components/AdminUI/Booked/Booked.module.css
@@ -7,3 +7,16 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 35px;
 }
+@media (max-width: 1250px) {
+  .wrapperBooked {
+    max-width: 800px;
+  grid-template-columns: repeat(2, 1fr);
+}
+}
+
+@media (max-width: 850px) {
+  .wrapperBooked {
+    max-width: 600px;
+  grid-template-columns: repeat(1, 1fr);
+}
+}
