--- a/src/components/AdminUI/LogIn/LogIn.module.css
+++ b/src/components/AdminUI/LogIn/LogIn.module.css
@@ -1,8 +1,7 @@
 .form{
+  box-sizing: border-box;
   max-width: 600px;
-  width: 100%;
   margin: 0 auto;
-  padding: 30px 5px 5px 5px;
 }
 
 .title{
@@ -20,7 +19,7 @@
   border: 1px solid #ff0000;
 }
 .item input {
-  width: 400px;
+  width: 60%;
   background-color: #E1E1E1;
   border: none;
 }
@@ -33,4 +32,25 @@
   background-color: #33B4EE;
   border: none;
   color: #fff;
+}
+
+
+@media(max-width: 600px){
+  .form{
+    font-weight: 400;
+    font-size: 20px;
+    margin: 15px;
+  }
+  .item {
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+  .item input {
+    width: 100%;
+    height: 25px;
+    background-color: #E1E1E1;
+    border: none;
+  }
 }
