--- a/src/components/AdminUI/SearchClient/SearchClient.module.css
+++ b/src/components/AdminUI/SearchClient/SearchClient.module.css
@@ -1,8 +1,6 @@
 .form{
   max-width: 940px;
-  width: 100%;
   margin: 0 auto;
-  padding: 30px 5px 5px 5px;
   text-align: left;
 }
 .form form{
@@ -10,10 +8,7 @@
   align-items: center;
   justify-content: center;
   max-width: 940px;
-  height: 450px;
-  padding: 5px;
   background-color: #D9D9D9;
-
 }
 .innerForm  {
   text-align: center;
@@ -46,4 +41,45 @@
   color: #fff;
   font-weight: 400;
   font-size: 24px;
+}
+
+@media (max-width: 980px) {
+  .form {
+    margin: 20px;
+  }
+}
+
+
+@media (max-width: 650px) {
+    .form {
+    margin: 20px;
+  }
+  .item {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  .item input {
+    width: 400px;
+    border: none;
+    padding: 5px;
+  }
+}
+@media (max-width: 480px) {
+  .innerForm  {
+      max-width: 280px;
+      padding: 10px;
+      background-color: #D9D9D9;
+    }
+  .item {
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  .item input {
+    width: 200px;
+    border: none;
+    padding: 5px;
+  }
 }
