--- a/src/components/Packages/Packages.module.css
+++ b/src/components/Packages/Packages.module.css
@@ -138,6 +138,7 @@
     font-size: 16px;
       width: fit-content;
       color: #fff;
+      white-space: wrap;
       margin-right: 10px;
       margin-bottom: 10px;
   }
