--- a/src/components/AdminUI/EditTime/EditTime.module.css
+++ b/src/components/AdminUI/EditTime/EditTime.module.css
@@ -20,6 +20,13 @@
   margin: 20px 0;
 }
 
+.title {
+  font-weight: 600;
+  font-size: 32px;
+  margin-bottom: 15px;
+
+}
+
 .timeInput {
 
   padding: 4px 8px;
