--- a/src/components/ServiceInform/Timetable/Timetabe.module.css
+++ b/src/components/ServiceInform/Timetable/Timetabe.module.css
@@ -48,7 +48,10 @@
   color: white;
   border-color: #45a049;
 }
-
+.title {
+  font-weight: 600;
+  font-size: 32px;
+}
 .bookBtn {
   margin-top: 20px;
   padding: 10px 20px;
